--- a/notebooks/fddb.ipynb
+++ b/notebooks/fddb.ipynb
@@ -221,7 +221,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "from pytorch_lightning import Trainer\n",
@@ -229,10 +233,10 @@
     "from ellipse_rcnn.core.model import EllipseRCNNLightning\n",
     "\n",
     "\n",
-    "dataset_loader = DataLoader(ds, batch_size=4, shuffle=True, collate_fn=collate_fn)\n",
+    "dataset_loader = DataLoader(ds, batch_size=24, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
     "pl_model = EllipseRCNNLightning(model)\n",
-    "trainer = Trainer(max_epochs=10, accelerator=\"cpu\")\n",
+    "trainer = Trainer(max_epochs=10, accelerator=\"auto\", log_every_n_steps=1)\n",
     "trainer.fit(pl_model, dataset_loader)"
    ]
   },
