--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -14,7 +14,9 @@
     "    ellipse_to_conic_matrix,\n",
     "    bbox_ellipse,\n",
     ")\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "from ellipse_rcnn.utils.data.fddb import FDDB"
    ]
   },
   {
@@ -125,27 +127,120 @@
    },
    "outputs": [],
    "source": [
-    "plotter = DetectionPlotter.from_ellipses(ellipse_matrices)\n",
-    "\n",
-    "print(calculated_bbox)\n",
-    "\n",
-    "fig, ax = plt.subplots(1, figsize=(15, 25))\n",
-    "ax.set_aspect(\"equal\")\n",
-    "ax.grid(True)\n",
-    "ax.set_xlim(-10, 10)\n",
-    "ax.set_ylim(-10, 10)\n",
-    "\n",
-    "plotter.plot(ax)"
+    "from ellipse_rcnn import EllipseRCNN\n",
+    "from ellipse_rcnn.core.model import EllipseRCNNLightning\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = EllipseRCNN()\n",
+    "pl_model = EllipseRCNNLightning(model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../checkpoints/ellipse_rcnn_model.pth\", \"rb\") as f:\n",
+    "    pl_model.load_state_dict(torch.load(f, weights_only=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = FDDB(\"../data/FDDB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "\n",
+    "image, target_dict = ds[5]\n",
+    "\n",
+    "image_reshaped = np.transpose(\n",
+    "    image.numpy(), (1, 2, 0)\n",
+    ")  # Moves the channel to the last axis\n",
+    "\n",
+    "if image_reshaped.dtype != np.uint8:\n",
+    "    # Assuming the array is normalized to [0, 1], scale to [0, 255]\n",
+    "    image_reshaped = image_reshaped.astype(np.uint8)\n",
+    "\n",
+    "# Step 3: Convert to Pillow image\n",
+    "img = Image.fromarray(image_reshaped, mode=\"RGB\")\n",
+    "\n",
+    "# Save or display the image\n",
+    "pred = model(image.unsqueeze(0))\n",
+    "if len(pred[0][\"boxes\"]) > 0:\n",
+    "    plotter = DetectionPlotter.from_ellipses(pred[0][\"ellipse_matrices\"].detach())\n",
+    "    fig, ax = plt.subplots(1, figsize=(15, 25))\n",
+    "    ax.set_aspect(\"equal\")\n",
+    "    ax.grid(True)\n",
+    "    # ax.set_xlim(-10, 10)\n",
+    "    # ax.set_ylim(-10, 10)\n",
+    "    ax.imshow(img)\n",
+    "    plotter.plot(ax)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# Create a figure and an axis\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "ax.imshow(img)\n",
+    "ax.axis(\"off\")  # Turn off the axis for better visualization\n",
+    "plt.show()  # Display the plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotter = DetectionPlotter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
