--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -13,6 +13,7 @@
     "from ellipse_rcnn.utils.conics import (\n",
     "    ellipse_to_conic_matrix,\n",
     "    bbox_ellipse,\n",
+    "    conic_center,\n",
     ")\n",
     "import torch\n",
     "\n",
@@ -138,8 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = EllipseRCNN()\n",
-    "pl_model = EllipseRCNNLightning(model=model)"
+    "model = EllipseRCNN()"
    ]
   },
   {
@@ -148,8 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../checkpoints/ellipse_rcnn_model.pth\", \"rb\") as f:\n",
-    "    pl_model.load_state_dict(torch.load(f, weights_only=True))"
+    "pl_model = EllipseRCNNLightning.load_from_checkpoint(\n",
+    "    \"../checkpoints/e=11-loss=0.02253.ckpt\", model=model\n",
+    ")"
    ]
   },
   {
@@ -158,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.eval()"
+    "model.eval().cpu()"
    ]
   },
   {
@@ -179,31 +180,34 @@
     "from PIL import Image\n",
     "import numpy as np\n",
     "\n",
-    "image, target_dict = ds[5]\n",
+    "for i in range(100):\n",
+    "    print(i)\n",
+    "    image, target_dict = ds[i]\n",
     "\n",
-    "image_reshaped = np.transpose(\n",
-    "    image.numpy(), (1, 2, 0)\n",
-    ")  # Moves the channel to the last axis\n",
+    "    image_reshaped = np.transpose(\n",
+    "        image.numpy(), (1, 2, 0)\n",
+    "    )  # Moves the channel to the last axis\n",
+    "    if image_reshaped.dtype != np.uint8:\n",
+    "        # Assuming the array is normalized to [0, 1], scale to [0, 255]\n",
+    "        image_reshaped = image_reshaped.astype(np.uint8)\n",
     "\n",
-    "if image_reshaped.dtype != np.uint8:\n",
-    "    # Assuming the array is normalized to [0, 1], scale to [0, 255]\n",
-    "    image_reshaped = image_reshaped.astype(np.uint8)\n",
+    "    # Step 3: Convert to Pillow image\n",
+    "    img = Image.fromarray(image_reshaped, mode=\"RGB\")\n",
     "\n",
-    "# Step 3: Convert to Pillow image\n",
-    "img = Image.fromarray(image_reshaped, mode=\"RGB\")\n",
+    "    # Save or display the image\n",
+    "    pred = model(image.unsqueeze(0))\n",
+    "    if len(pred[0][\"boxes\"]) > 0:\n",
+    "        print(pred[0][\"ellipse_matrices\"])\n",
+    "        fig, ax = plt.subplots(1, figsize=(15, 25))\n",
+    "        ax.set_aspect(\"equal\")\n",
+    "        ax.grid(True)\n",
+    "        # ax.set_xlim(-10, 10)\n",
+    "        # ax.set_ylim(-10, 10)\n",
+    "        ax.imshow(img)\n",
+    "        plt.show()\n",
     "\n",
-    "# Save or display the image\n",
-    "pred = model(image.unsqueeze(0))\n",
-    "if len(pred[0][\"boxes\"]) > 0:\n",
-    "    plotter = DetectionPlotter.from_ellipses(pred[0][\"ellipse_matrices\"].detach())\n",
-    "    fig, ax = plt.subplots(1, figsize=(15, 25))\n",
-    "    ax.set_aspect(\"equal\")\n",
-    "    ax.grid(True)\n",
-    "    # ax.set_xlim(-10, 10)\n",
-    "    # ax.set_ylim(-10, 10)\n",
-    "    ax.imshow(img)\n",
-    "    plotter.plot(ax)\n",
-    "    plt.show()"
+    "        print(\"Conic centers: \", conic_center(pred[0][\"ellipse_matrices\"]))\n",
+    "        break"
    ]
   },
   {
