Direct training of ellipse predictor

--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -1,18 +1,14 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from matplotlib.collections import EllipseCollection\n",
     "\n",
-    "from ellipse_rcnn.utils.conics import (\n",
+    "from ellipse_rcnn.core.ops import (\n",
     "    ellipse_to_conic_matrix,\n",
     "    ellipse_center,\n",
     ")\n",
@@ -21,14 +17,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from ellipse_rcnn import EllipseRCNN\n",
     "from ellipse_rcnn.core.model import EllipseRCNNLightning\n",
@@ -75,14 +67,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from matplotlib.axes import Axes\n",
     "from matplotlib import pyplot as plt\n",
-    "from ellipse_rcnn.utils.conics import ellipse_axes, ellipse_angle\n",
+    "from ellipse_rcnn.core.ops import ellipse_axes, ellipse_angle\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -156,11 +148,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
