--- a/notebooks/fddb.ipynb
+++ b/notebooks/fddb.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ellipse_rcnn.utils.data.fddb import FDDB\n",
+    "from ellipse_rcnn.data import FDDB\n",
     "\n",
     "ds = FDDB(\"../data/FDDB/\", transform=lambda x: x)"
    ]
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ellipse_rcnn.utils.data.base import collate_fn\n",
+    "from ellipse_rcnn.data import collate_fn\n",
     "\n",
     "images, targets = collate_fn([(image, target)])\n",
     "\n",
