--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -13,7 +13,7 @@
     "    ellipse_center,\n",
     ")\n",
     "\n",
-    "from ellipse_rcnn.utils.data.fddb import FDDB"
+    "from ellipse_rcnn.data import FDDB"
    ]
   },
   {
